syntax = "proto3";
package jpm.movie.model.v1;

option java_multiple_files = true;
option java_package = "jpm.movie.model.v1.proto.generated";

import "model.proto";

/** REQUESTS */

message RawRequestProto {
  repeated int32 years = 1;
  repeated string names = 2;
  repeated string casts = 3;
  repeated string genres = 4;
}

/** RESPONSES */

message MovieResponseProto {
  oneof types {
    QueryResultProto success = 1;
    RequestFailureProto failure = 2;
  }
}

/** RESPONSES / SUCCESSES */

message QueryResultProto {
  repeated MovieProto movies = 1;
}

/** RESPONSES / FAILURES */
message Error {
  oneof types {
    ValidationErrorProto validationError = 1;
  }

  message ValidationErrorProto {
    oneof types {
      OutOfBoundYearProto outOfBoundYear = 1;
      InvalidIntegerProto invalidInteger = 2;
      InvalidGenreProto invalidGenre = 3;
      InvalidMovieNameProto invalidMovieName = 4;
      InvalidCastMemberProto invalidCastMember = 5;
    }

    message OutOfBoundYearProto {
      string cause = 1;
      repeated int32 invalidYears = 2;
    }

    message InvalidIntegerProto {
      string cause = 1;
      repeated string invalidYears = 2;
    }

    message InvalidGenreProto {
      string cause = 1;
      repeated string invalidGenres = 2;
    }

    message InvalidMovieNameProto {
      string cause = 1;
      repeated string invalidNames = 2;
    }

    message InvalidCastMemberProto {
      string cause = 1;
      repeated string invalidNames = 2;
    }
  }
}

message RequestFailureProto {
  repeated Error errors = 1;
}